# TypstLive

./: main.py  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  compiler.py  config.py  models.py  routes.py  websocket.py
app/static/css/: auth.css  base.css  editor.css  hint.css  syntax-highlight.css  user.css
app/static/js/: TOOLBOX_DATA.js  TOOLBOX_DATA_SOURCE.js  TYPST_KEYWORDS.js  code-mirror.js  compile.js  editor.js  hint.js  syntax-highlight.js  utils.js
app/templates/: base.html  editor.html  history.html  profile.html
app/templates/auth/: base.html  login.html  register.html
app/templates/user/: base_user.html  history.html  info.html  profile.html
app/utils/: TOOLBOX_DATA.py  build_toolbox.py
migrations/versions/: 995f7fbd8946_added_phone_number_field_to_user_model.py  a9b0c8edadad_replace_image_path_with_current_.py  f49224c0b3c2_create_initial_base_revision.py
