[project]
name = "typstlive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.124.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pillow>=12.0.0",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "watchfiles>=1.1.1",
    "websockets>=15.0.1",
]
